# super-tradingagents-cn-skill

./: .clinerules  .cursorrules  CLAUDE.md  README.md  SKILL.md  pyproject.toml
src/super_tradingagents_cn_skill/: __init__.py  __main__.py  cli.py  quick_analyze.py  skill_installer.py
src/super_tradingagents_cn_skill/assets/skills/: .windsurfrules
tests/: test_import.py
